Changes to Navbar; open from side at smaller screen sizes, corrected z-index issue with nav and portfolio components and other minor tweaks

--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -1,3 +1,97 @@
+.container {
+  max-width: 1200px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
+  padding: 0 1rem;
+  height: 100%;
+}
+
+.navbar {    
+  height: 10vh;
+  background-color: #e1e1e1;
+  position: relative;
+  z-index: 10;
+}
+
+.logo-img  {
+    width: 5rem;
+}
+
+.logo-link {
+    display: flex;
+    height: auto;
+    align-items: center;
+}
+
+.button-menu {
+  display: none;
+}
+
+.nav-list ul {
+  display: flex;
+  justify-content: space-between;
+  list-style-type: none;
+}
+
+.nav-list ul .active {
+  position: relative;
+}
+
+.nav-list ul .active::after {
+  content: '';
+  position: absolute;
+  bottom: -7px;
+  left: 0;
+  width: 100%;
+  height: 5px;
+  background-color: #ff6060;
+}
+
+.nav-list li {
+    margin: 0 1rem;
+}
+
+@media (max-width: 768px) {
+  .nav-list ul li:not(:last-child) {
+    margin-right: 30px;
+  }
+}
+
+@media (max-width: 768px) {
+  .button-menu {
+    display: block;
+  }
+
+.nav-list {
+    position: absolute;
+    right: 0;
+    top: 10vh;
+    background-color: #e1e1e1;
+    width: 0px;
+    height: calc(100vh - 10vh);
+    transition: all 0.2s ease-in-out;
+    overflow: hidden;
+  }
+
+  .nav-list.active {
+    width: 60vw;
+  }
+
+  .nav-list ul {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .nav-list ul li {
+    margin-left: 1.5rem;
+    margin-top: 1.5rem;
+  }
+}
+
+
+
 /** VARIABLES **/
 /* :root {
     --light1: #f9f5ff;
@@ -22,96 +116,3 @@
     --body: "Menlo";
   } */
 
-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100vw;
-    height: 12vh;
-    top: 0;
-    position: sticky;
-    position: -webkit-sticky;
-    z-index: 4;
-    margin-bottom: 2rem;
-}
-
-.logo {
-    margin-left: 1rem;
-}
-
-.logo-link {
-    display: flex;
-    height: auto;
-    align-items: center;
-}
-
-.logo-img {
-    width: 5rem;
-}
-
-.nav-list {
-    display: none;
-    position: absolute;
-    width: 100%;
-    height: 88vh;
-    top: 12vh;
-    left: 0;
-    flex-direction: column;
-}
-
-.nav-item {
-    margin: 0;
-    text-align: center;
-}
-
-
-.active {
-    text-decoration: 5px underline #fe5f55;
-    text-underline-offset: 0.3rem;
-}
-
-.button-menu {
-    display: block;
-    margin-left: auto;
-    margin-right: 1rem;
-    position: absolute;
-    top: 50%;
-    right: 1rem;
-    transform: translateY(-50%);
-}
-
-.button-menu:hover {
-    background-color: var(--light4);
-}
-
-.expanded {
-    display: block;
-    position: absolute;
-    background-color: #cecece;
-}
-
-/* MEDIA QUERIES */
-
-@media screen and (min-width: 768px) {
-    /* nav {
-        
-    } */
-
-    .nav-list {
-        display: flex;
-        justify-content: space-around;
-        margin: 0 1rem;
-        position: static;
-        width: auto;
-        height: auto;
-        flex-direction: row;
-    }
-
-    .nav-item {
-        margin: 0 1rem;
-    }
-
-    .button-menu {
-        display: none;
-    }
-}
