--- a/src/index.css
+++ b/src/index.css
@@ -64,8 +64,12 @@ a {
 
 /** STYLES **/
 body {
-  background-color: var(--light1);
+  background-color: #e1e1e1;
   color: var(--dark1);
+  max-width: 1200px;
+  margin: 0 auto;
+  height: 100%;
+  padding: 0 1rem;
 }
 
 a {
